--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel="icon" href="assets/favicon.png" type="image/png">
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
